OO-4828: add average completion to participants